# Django_HW

./: .env.sample  README.md  groups.json  products.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_rename_prise_product_price.py  0003_alter_product_image.py  0003_product_manufactured_at.py  0004_product_view_counter.py  0005_product_is_published_version.py  0006_version_owner.py  0007_remove_version_owner_product_owner.py  0008_alter_product_options.py
catalog/templates/: about_product.html  base.html  products_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: password_reset_form.html  user_form.html
