[tool.poetry]
name = "hw-19"
version = "0.1.0"
description = ""
authors = ["Alexey Dyakonov <dyakonov261@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.27.0"
psycopg2-binary = "^2.9.9"
django = "4.2.2"
redis = "^5.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
